# MisakaLove

./: build.gradle  dependencies.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: shape_round_whiter.xml  sl_music.xml  sl_rotate.xml
app/src/main/res/layout/: activity_main.xml  (+5 more)
gradle/wrapper/: gradle-wrapper.properties
misakalovelibrary/: build.gradle  face.txt
misakalovelibrary/src/main/: AndroidManifest.xml
misakalovelibrary/src/main/cpp/: CMakeLists.txt  native-lib.cpp
misakalovelibrary/src/main/cpp/camera/: CMakeLists.txt  camera_preview_controler.cpp  camera_preview_controler.h  camera_preview_program.cpp  camera_preview_program.h  camera_preview_render.cpp  camera_preview_render.h
misakalovelibrary/src/main/cpp/jni/: ChangbaRecordingPreviewScheduler.cpp  com_ty_misakalovelibrary_camera_ChangbaRecordingPreviewScheduler.h
misakalovelibrary/src/main/cpp/libcommon/: CMakeLists.txt  CommonTools.h  logutils.h
misakalovelibrary/src/main/cpp/libcommon/assetsutil/: assets_reader.cpp  assets_reader.h
misakalovelibrary/src/main/cpp/libcommon/egl/egl_core/: egl_core.h
misakalovelibrary/src/main/cpp/libcommon/egl_core/: egl_core.h  egl_share_context.cpp  gl_tools.h
misakalovelibrary/src/main/cpp/libcommon/face/: face_constant.cpp  face_constant.h
misakalovelibrary/src/main/cpp/libcommon/jni_utils/: jni_primitives.h  jni_utils.cpp  jni_utils.h
misakalovelibrary/src/main/cpp/libcommon/message_queue/: message_queue.cpp  message_queue.h
misakalovelibrary/src/main/cpp/libcommon/openglutils/: opengl_utils.cpp  opengl_utils.h
misakalovelibrary/src/main/cpp/libeditcore/: CMakeLists.txt  filter_program.cpp  filter_program.h  video_effect_core.cpp  video_effect_core.h
misakalovelibrary/src/main/cpp/libeditcore/beauty/: beauty_filter.cpp  beauty_filter.h  stick_filter.cpp  stick_filter.h
misakalovelibrary/src/main/cpp/libeditcore/common/: camera_preview_program.cpp  camera_preview_program.h  show_program.cpp  show_program.h
misakalovelibrary/src/main/cpp/libeditcore/decoder/: image.h  png_decoder.cpp  png_decoder.h  rgba_frame.h  scene_video_decoder.cpp  scene_video_decoder.h
misakalovelibrary/src/main/cpp/libeditcore/filter/: amaro_filter.cpp  amaro_filter.h  cool_filter.cpp  cool_filter.h  fairytale.cpp  fairytale.h  white_cat_filter.cpp  white_cat_filter.h
misakalovelibrary/src/main/cpp/opengl/: CMakeLists.txt  base_render.cpp  base_render.h  opengl_utils.cpp  opengl_utils.h  program.cpp  program.h
(+44 files in other folders)
